# azureProject

./: .gitignore  README.md  azureTestProgram.sln
Debug/: azureTestProgram.ilk
azureTestProgram/: CMakeLists.txt  azureTestProgram.vcxproj  azureTestProgram.vcxproj.filters  checkerFunctions.h  fbxFunctions.h  gltfFunctions.h  imageModeFunctions.h  main.cpp  mkvModeFunctions.h  modeOneFunctions.h  modeThreeFunctions.h  modeTwoFunctions.h  oscFunctions.h  packages.config  realtimeModeFunctions.h  streamModeFunctions.h  testFile.h  videoModeFunctions.h
azureTestProgram/Debug/: vc141.idb
azureTestProgram/Debug/azureTestProgram.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  azureTestProgram.lastbuildstate  azureTestProgram.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
azureTestProgram/oscpack/ip/: IpEndpointName.cpp  NetworkingUtils.cpp  NetworkingUtils.h  UdpSocket.h
azureTestProgram/oscpack/osc/: OscHostEndianness.h  OscPrintReceivedElements.cpp  OscReceivedElements.h
azureTestProgram/x64/Debug/: vc141.idb
azureTestProgram/x64/Debug/azureTestProgram.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  azureTestProgram.lastbuildstate  azureTestProgram.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
